--- a/debian/control
+++ b/debian/control
@@ -13,6 +13,7 @@ Build-Depends: debhelper (>= 9),
                libboost-test-dev,
                libboost-timer-dev,
                libboost-system-dev,
+               libboost-filesystem-dev,
                libeigen3-dev (>= 3.2),
                libspacevecalg-dev
 
