--- a/debian/control
+++ b/debian/control
@@ -7,15 +7,27 @@ Homepage: http://github.com/jrl-umi3218/RBDyn
 Vcs-Git: git://github.com/jrl-umi3218/RBDyn -b debian
 Vcs-Browser: http://github.com/jrl-umi3218/RBDyn
 Build-Depends: debhelper (>= 9),
-               pkg-config,
-               cmake,
-               doxygen,
-               libboost-test-dev,
-               libboost-timer-dev,
-               libboost-system-dev,
-               libboost-filesystem-dev,
-               libeigen3-dev (>= 3.2),
-               libspacevecalg-dev
+ pkg-config,
+ cmake,
+ doxygen,
+ libboost-test-dev,
+ libboost-timer-dev,
+ libboost-system-dev,
+ libboost-filesystem-dev,
+ libeigen3-dev (>= 3.2),
+ libspacevecalg-dev,
+ python-all,
+ python-dev,
+ python-nose,
+ python-setuptools,
+ cython,
+ python3-all,
+ python3-dev,
+ python3-nose,
+ python3-setuptools,
+ cython3,
+ python-spacevecalg,
+ python3-spacevecalg
 
 Package: librbdyn-dev
 Section: libdevel
@@ -58,3 +70,17 @@ Description: RBDyn API documentation
  dynamics of rigid body systems.
  .
  This package provides the complete API documentation in HTML format.
+
+Package: python-rbdyn
+Section: python
+Architecture: any
+Depends: ${python:Depends}, ${misc:Depends}, ${shlibs:Depends}, python-spacevecalg
+Description: RBDyn Python bindings
+ Python bindings for the RBDyn library. Compatible with Python 2.
+
+Package: python3-rbdyn
+Section: python
+Architecture: any
+Depends: ${python3:Depends}, ${misc:Depends}, ${shlibs:Depends}, python3-spacevecalg
+Description: RBDyn Python bindings
+ Python bindings for the RBDyn library. Compatible with Python 3.
